Add custom all sponsors, speakers views

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2539,7 +2539,7 @@
   },
   "sponsorsList__title": {
     "col": 12,
-    "defaultMessage": "Sponsors",
+    "defaultMessage": "All Sponsors",
     "end": 1041,
     "file": "src/containers/sponsor/list.tsx",
     "line": 26,
